Restructured service and controllers
