# services/ratingManager.js
@@ -3,8 +3,9 @@ import {Types} from 'mongoose';
 import {logger} from "@oas-tools/commons";
 import _ from 'lodash';
 
+
 export function getRatings(_req, res) {
-    const idRecipe = req.params.idRecipe;
+    const idRecipe = _req.params.idRecipe;
     Rating.find({idRecipe: idRecipe}).then((ratingsForRecipe) => {     
         
         /*
@@ -26,41 +27,12 @@ export function getRatings(_req, res) {
     });
 }
 
-export function createRating(req, res) {
-    const {like, comment, idRecipe, idUser} = req.body;
-
-  const rating = new Rating({
-    like, 
-    comment, 
-    idRecipe, 
-    idUser
-  });
-
-  //pendiente añadir comprobacion con perspective api
-
-  try{
-    rating.save();
-    return res.sendStatus(201);
-  } catch(e) {
-    if(e.errors){
-      debug("Validation problem when saving");
-      res.status(400).send({error: e.message});
-    }else{
-      debug("DB problem", e);
-      res.sendStatus(500);
-    }
-   
-  }
-}
-
-/*
-No lo necesitamos
  export function findByidRating(req, res) {
     res.send({
         message: 'This is the mockup controller for updateRating'
     });
 }
- */
+
 export function updateRating(req, res) {
     res.send({
         message: 'This is the mockup controller for updateRating'
@@ -73,3 +45,43 @@ export function deleteRating(req, res) {
     });
 }
 
+
+
+
+export function getAllRatings(req, res) {
+    Rating.find({}).then((results) => {      
+      res.send(results);
+  }).catch((err) => {
+      logger.error(`Error while getting all accounts: ${err.message}`);
+      res.status(500).send({ message: "Unexpected error ocurred, please try again later" });
+  });
+  }
+  
+  export function addRating(req, res) {
+      const {like, comment, idRecipe, idUser} = req.body;
+  
+    const rating = new Rating({
+      like, 
+      comment, 
+      idRecipe, 
+      idUser
+    });
+  
+    //pendiente añadir comprobacion con perspective api
+  
+    try{
+      rating.save();
+      return res.sendStatus(201);
+    } catch(e) {
+      if(e.errors){
+        debug("Validation problem when saving");
+        res.status(400).send({error: e.message});
+      }else{
+        debug("DB problem", e);
+        res.sendStatus(501);
+      }
+     
+    }
+  }
+  
+  
